Fix crash in DesktopCapture API

After crrev.com/478081 the same DesktopCaptureOptions were used for
screen and window capturer. This means that the same X display was
used on different threads, which is not supported.

BUG=732695

Change-Id: Ife46591ec8bf660e3675990867b578b8de4909e7